fix view height on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -165,7 +165,7 @@ li {
 
 /*Details*/
 .details {
-  height: 100vh;
+  height: auto;
   display: flex;
   overflow: hidden;
   flex-direction: row;
